# interception-copilot

./: Cargo.toml  README.md  test_args.sh
.github/: copilot-instructions.md
examples/: README.md  basic_keylogger.rs  escape_blocker.rs  keylogger.rs  mouse_capture.rs  precedence_demo.rs  typed_keylogger.rs  typed_mouse_capture.rs
installer/: Cargo.toml  README.md  build.rs
installer/drivers/: KBDNT51X86.sys  KBDNT52I64.sys  KBDNT52X86.sys  KBDNT60A64.sys  keyboard.reg
installer/examples/: install_programmatic.rs  system_detection.rs
installer/src/: installer.rs  lib.rs  main.rs  registry.rs  str.rs  sysinfo.rs  system.rs  wcstr.rs
installer/src/drivers/: KBDNT60I64.sys  KBDNT61X86.sys  MOUNT52A64.sys  MOUNT52X86.sys  MOUNT60A64.sys  MOUNT60I64.sys  MOUNT60X86.sys  MOUNT61I64.sys  MOUNT61X86.sys
interception-c/drivers/: KBDNT52A64.sys  KBDNT60X86.sys  KBDNT61I64.sys  MOUNT51X86.sys  MOUNT52I64.sys  mouse.reg
src/: lib.rs
