[package]
name = "interception-copilot"
version = "0.1.0"
edition = "2024"
authors = ["Interception Copilot"]
description = "Rust port of the Interception library using windows-sys with a safe API"
license = "LGPL-3.0"
repository = "https://github.com/unlimitedsola/interception-copilot"
documentation = "https://docs.rs/interception-copilot"
keywords = ["windows", "input", "keyboard", "mouse", "interception"]
categories = ["os::windows-apis", "api-bindings"]

[dependencies]
bitflags = "2.9.1"
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Ioctl",
] }
