[package]
name = "interception-installer"
version = "0.1.0"
edition = "2024"
authors = ["Interception"]
description = "Driver installer for the Interception library"
license = "LGPL-3.0-only"

[[bin]]
name = "interception-installer"
path = "src/main.rs"

[features]
legacy-platforms = []

[dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
